# core

./: .gitignore  Dockerfile  LICENSE  README.md  db.sqlite3  pyproject.toml
.github/workflows/: django.yml  github-config.yml
app/: settings.py  urls.py
app/client/: admin.py  api.py  apps.py  models.py  serializer.py  urls.py
app/client/migrations/: 0001_initial.py  0002_alter_clientmodel_id.py
app/core/: models.py
app/core/migrations/: 0001_initial.py
app/telegram_auth/: api.py  apps.py  models.py  serializers.py  urls.py
app/telegram_auth/migrations/: 0001_initial.py
